<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>barcode_demo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mark@telemething.com">mark west</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>launch</depend>

  <depend>barcode_msgs</depend>
  <depend>image_draw_msgs</depend>

  <exec_depend>image_draw</exec_depend>
  <exec_depend>qr_scan</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
